5th try to fix bg fixed for coach div on mobile

--- a/css/coach.css
+++ b/css/coach.css
@@ -9,7 +9,7 @@
 /* Mobile */
 @media all and (max-width: 540px) {
     .thecoach {
-        background-size: auto 100vh; 
+        background-size: auto 110vh; 
         padding: 50px 40px;
         flex-direction: column;
         align-items: center;
